# sola-fi

./: PALLET.md  app.json  key  nfts.json  package-lock.json  package.json  tsconfig.json
android/: settings.gradle
android/app/: build.gradle
app/: _layout.tsx  landing.tsx  send.tsx
app/(tabs)/: _layout.tsx  index.tsx  nft.tsx  pay.tsx  profile.tsx  settings.tsx  transactions.tsx  two.tsx
app/auth/: create.tsx  login.tsx  recover.tsx  seed.tsx  signup.tsx  welcome.tsx
assets/nft-files/: DeterminedWarrior-withKatana.json  kakaki-art.json  kakaki-man2.json
components/__tests__/: StyledText-test.js
components/__tests__/__snapshots__/: StyledText-test.js.snap
components/auth/: AuthProvider.tsx
components/theme/: ThemeContext.tsx
components/ui/: AnimatedGradient.tsx  BottomSheet.tsx  ConfirmModal.tsx  GlowOrb.tsx  GradientBackground.tsx  InputField.tsx  PrimaryButton.tsx  Toast.tsx  TransactionDetailModal.tsx
components/wallet/: ReceiveModal.tsx  WalletBadge.tsx  useSolPrice.ts  useWallet.ts
constants/: Colors.ts
create-nft-metaplex/: .env  .env.example  README.md  metadata.json  mint-outputs.json  package-lock.json  package.json  tsconfig.json
create-nft-metaplex/nfts-files/: kakaki-man1.json  katana-art.json  links.json
create-nft-metaplex/programs/: Cargo.toml  sell-nft.rs
create-nft-metaplex/src/: cli.ts  config.ts  index.ts
create-nft-metaplex/src/services/: batch.ts  nft.ts
create-nft-metaplex/src/utils/: connection.ts  metaplex.ts  (+1 more)
db/: create_wallets_table.sql  handle_new_user_safe.sql
lib/: supabase.ts
scripts/: check_tx.js
(+4 files in other folders)
