[package]
name = "sell-nft"
version = "0.1.0"
edition = "2021"
authors = ["Startover NFT Team"]
description = "Example Solana program that lists and sells NFTs using an escrow PDA."
license = "MIT"

[lib]
name = "sell_nft"
crate-type = ["cdylib", "lib"]
path = "sell-nft.rs"

[features]
default = []
no-entrypoint = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = { version = "0.29.0", features = ["token"] }
